packages/tweak-mantine/src/core/theme.module.css
/* ... */
.pagination-control {
  &:where(:not([data-active])) {
    border-color: var(--mantine-color-default-border);
    background-color: var(--mantine-neutral-color-0);

    @mixin hover {
      &:where(:not(:disabled, [data-disabled])) {
        background-color: var(--mantine-neutral-color-1);
      }
    }
  }
}

.password-input-visibility-toggle {
  color: var(--mantine-neutral-color-8);

  @mixin hover {
    color: var(--mantine-neutral-color-8);
    background-color: var(--mantine-neutral-color-1);
  }
}

.pill-root {
  background-color: var(--mantine-neutral-color-2);
  color: var(--mantine-color-text);
}

.stepper-root {
  --stepper-outline-color: var(--mantine-color-default-border);
}

.stepper-separator {
  background-color: var(--mantine-neutral-color-3);

  &:where([data-active]) {
    background-color: var(--stepper-color);
  }
}

.stepper-vertical-separator {
  border-color: var(--mantine-neutral-color-3);

  &:where([data-active]) {
    border-color: var(--stepper-color);
  }
}

.stepper-step-icon {
  border-color: var(--mantine-neutral-color-3);
  background-color: var(--mantine-neutral-color-3);
  color: var(--mantine-color-text);

  &:where([data-progress]) {
    border-color: var(--step-color);
  }

  &:where([data-completed]) {
    color: var(--stepper-icon-color, var(--mantine-color-white));
    background-color: var(--step-color);
    border-color: var(--step-color);
  }
}

.switch-track {
  --switch-bg-2: var(--mantine-neutral-color-4);
  background-color: var(--switch-bg-2);

  input:checked + & {
    --switch-bg-2: var(--switch-color);
  }

  input:disabled + &,
  input[data-disabled] + & {
    --switch-bg-2: var(--mantine-neutral-color-3);
  }
}

.switch-thumb {
  @mixin dark {
    background-color: var(--switch-thumb-bg-2, var(--mantine-neutral-color-9));
  }
  @mixin light {
    background-color: var(--switch-thumb-bg-2, var(--mantine-neutral-color-0));
  }

  input:checked + * > & {
    --switch-thumb-bg-2: var(--mantine-color-white);
  }

  input:disabled + * > &,
  input[data-disabled] + * > & {
    @mixin dark {
      --switch-thumb-bg-2: var(--mantine-neutral-color-7);
    }
    @mixin light {
      --switch-thumb-bg-2: var(--mantine-neutral-color-0);
    }
  }

  &:where([data-with-thumb-indicator])::before {
    background-color: var(--switch-bg-2);
  }
}

.table-of-contents-control {
  @mixin where-hover {
    &:where(:not([data-variant="none"])) {
      background-color: var(--mantine-neutral-color-1);
    }
  }
}

.textarea-wrapper {
  scrollbar-width: thin;

  @mixin where-light {
    scrollbar-color: rgba(0, 0, 0, 0.4) transparent;
  }

  @mixin where-dark {
    scrollbar-color: rgba(255, 255, 255, 0.4) transparent;
  }

  &::-webkit-scrollbar {
    width: 12px;
    height: 12px;
    background-color: transparent;

    @mixin hover {
      background-color: var(--mantine-color-body-secondary);
    }
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 12px;
    border: 2px solid transparent;
    background-clip: padding-box;
  }

  @mixin where-light {
    &::-webkit-scrollbar-thumb {
      background-color: rgba(0, 0, 0, 0.4);
    }

    &::-webkit-scrollbar:hover::-webkit-scrollbar-thumb {
      background-color: rgba(0, 0, 0, 0.5);
    }
  }

  @mixin where-dark {
    &::-webkit-scrollbar-thumb {
      background-color: rgba(255, 255, 255, 0.4);
    }

    &::-webkit-scrollbar:hover::-webkit-scrollbar-thumb {
      background-color: rgba(255, 255, 255, 0.5);
    }
  }
}

.popover-dropdown {
  background-color: var(--mantine-neutral-color-0);
  border-color: var(--mantine-neutral-color-3);
}

.popover-arrow {
  border-color: var(--mantine-neutral-color-4);
}

.color-input-dropdown {
  background-color: var(--mantine-neutral-color-0);
  border-color: var(--mantine-neutral-color-3);
}

.color-input-eye-dropper-button {
  color: var(--mantine-neutral-color-8);

  @mixin hover {
    color: var(--mantine-neutral-color-8);
    background-color: var(--mantine-neutral-color-1);
  }
}

.combobox-option {
  @mixin hover {
    &:where(:not([data-combobox-selected], [data-combobox-disabled])) {
      background-color: var(--mantine-neutral-color-1);
    }
  }
}

.combobox-search {
  &,
  &:focus {
    border-color: var(--mantine-color-default-border);
  }

  background-color: var(--mantine-primary-color-light);
}

.combobox-header-footer {
  border-color: var(--mantine-color-default-border);
}

.combobox-group-label {
  &::after {
    background-color: var(--mantine-primary-color-light);
  }
}

.menu-divider {
  border-color: var(--mantine-color-default-border);
}

.menu-item {
  &:where(:hover, :focus) {
    &:where(:not(:disabled, [data-disabled])) {
      background-color: var(--menu-item-hover, var(--mantine-neutral-color-2));
    }
  }
}

